<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        tools:context=".feature.view.fragments.AlbumsOfCollectorFragment"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/title_detail_collector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:id="@+id/back_detail_collector"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_48sdp"
                android:contentDescription="@string/usability_back"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="Detalle Colleccionista"
                android:textAlignment="center"
                android:textSize="@dimen/_24sdp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/header_label_initials_detail"
            style="@style/Text.Small"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="117dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/circle_item"
            android:backgroundTint="@color/light_gray"
            android:gravity="center"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/collector_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_1sdp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            />

        <TextView
            android:id="@+id/collector_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            android:paddingBottom="0dp"
            />


        <TextView
            android:id="@+id/collector_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            android:paddingBottom="0dp"
            />
        <TextView
            android:id="@+id/titulo_lista_albumes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:text="@string/albumes_collector"
            android:paddingBottom="0dp"/>

        <TextView
            android:id="@+id/txt_no_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_albumes_para_este_coleccionista"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView

            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:id="@+id/albumsOfCollectorRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:listitem="@layout/album_of_collector_item">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</ScrollView>