...
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:id="@+id/artistRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/artist_item"/>


</LinearLayout>
