<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable name="artist" type="com.co.retrofit.app.feature.model.dto.Artist"/>
    </data>


    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <ImageView
                    android:id="@+id/iv_dish_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_margin="@dimen/_1sdp"
                    android:contentDescription="@string/image_contentDescription"
                    tools:src="@mipmap/ic_launcher"
                    android:paddingTop="5dp"/>

            <TextView
                    android:id="@+id/tv_dish_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    android:text="@{artist.name}"
                    android:paddingBottom="10dp"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>